kubectl-edit-231tv.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-02-07T03:58:00Z"
  labels:
    app: inventory
  name: sample-deployment
  namespace: default
  resourceVersion: "237193"
  selfLink: /api/v1/namespaces/default/services/sample-deployment
  uid: 0835632f-495e-11ea-b951-02dbf11d83bf
spec:
  clusterIP: 10.0.87.96
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30030
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: inventory
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 10.0.0.0/16
  - 40.90.185.46/32
  - 13.64.39.16/32
  - 13.66.138.92/31
  - 13.66.140.176/28
  - 13.67.8.108/31
  - 13.67.9.208/28
  - 13.69.64.76/31
  - 13.69.66.144/28
  - 13.69.227.76/31
  - 13.69.229.80/28
  - 13.70.72.28/31
  - 13.70.72.240/28
  - 13.71.49.1/32
  - 13.71.170.44/31
  - 13.71.172.144/28
  - 13.71.194.116/31
  - 13.71.196.32/28
  - 13.75.34.148/31
  - 13.75.38.16/28
  - 13.75.217.184/32
  - 13.75.221.78/32
  - 13.77.50.68/31
  - 13.77.52.224/28
  - 13.78.106.92/31
  - 13.78.108.176/28
  - 13.84.189.17/32
  - 13.85.22.63/32
  - 13.86.102.66/32
  - 13.87.56.84/31
  - 13.87.57.144/28
  - 13.87.122.84/31
  - 13.87.123.144/28
  - 13.89.170.204/31
  - 13.89.174.64/28
  - 20.36.106.68/31
  - 20.36.107.176/28
  - 20.36.114.20/31
  - 20.36.115.128/28
  - 20.37.52.67/32
  - 20.37.74.224/31
  - 20.37.76.32/28
  - 20.37.81.41/32
  - 20.39.80.2/32
  - 20.39.99.81/32
  - 20.40.125.155/32
  - 20.40.160.107/32
  - 20.44.2.4/31
  - 20.44.3.224/28
  - 20.44.33.246/32
  - 20.44.72.3/32
  - 20.46.144.85/32
  - 20.150.170.224/28
  - 20.188.77.119/32
  - 20.192.234.160/28
  - 20.193.202.160/28
  - 23.96.224.175/32
  - 23.101.67.140/32
  - 23.101.166.38/32
  - 40.66.60.111/32
  - 40.67.58.224/28
  - 40.69.106.68/31
  - 40.69.107.224/28
  - 40.70.146.76/31
  - 40.70.148.16/28
  - 40.71.10.204/31
  - 40.71.13.128/28
  - 40.74.100.52/31
  - 40.74.101.48/28
  - 40.74.146.80/31
  - 40.74.147.32/28
  - 40.78.194.68/31
  - 40.78.195.224/28
  - 40.78.202.128/31
  - 40.78.203.160/28
  - 40.79.130.44/31
  - 40.79.131.192/28
  - 40.79.178.68/31
  - 40.79.179.192/28
  - 40.80.232.185/32
  - 40.81.47.216/32
  - 40.81.89.24/32
  - 40.81.185.8/32
  - 40.82.157.167/32
  - 40.90.185.46/32
  - 40.112.242.148/31
  - 40.112.243.240/28
  - 51.12.98.224/28
  - 51.12.202.224/28
  - 51.107.0.91/32
  - 51.107.59.0/28
  - 51.107.96.8/32
  - 51.107.155.0/28
  - 51.116.0.0/32
  - 51.116.59.0/28
  - 51.116.96.0/32
  - 51.116.155.64/28
  - 51.120.2.185/32
  - 51.120.98.176/28
  - 51.120.130.134/32
  - 51.120.218.224/28
  - 51.137.136.0/32
  - 51.140.146.60/31
  - 51.140.149.0/28
  - 51.140.210.84/31
  - 51.140.211.176/28
  - 51.143.127.203/32
  - 51.145.56.125/32
  - 51.145.179.78/32
  - 52.139.20.34/32
  - 52.139.80.117/32
  - 52.139.152.0/32
  - 52.140.238.179/32
  - 52.142.95.35/32
  - 52.162.106.148/31
  - 52.162.110.80/28
  - 52.224.186.99/32
  - 52.231.18.44/31
  - 52.231.19.192/28
  - 52.231.146.84/31
  - 52.231.147.176/28
  - 52.253.135.58/32
  - 52.253.159.160/32
  - 52.253.229.253/32
  - 65.52.164.91/32
  - 65.52.173.247/32
  - 65.52.250.4/31
  - 65.52.252.32/28
  - 102.133.0.79/32
  - 102.133.26.4/31
  - 102.133.28.0/28
  - 102.133.130.197/32
  - 102.133.154.4/31
  - 102.133.156.0/28
  - 104.41.217.243/32
  - 104.41.218.160/32
  - 104.211.81.28/31
  - 104.211.81.240/28
  - 104.211.146.68/31
  - 104.211.147.144/28
  - 104.214.18.172/31
  - 104.214.19.224/28
  - 137.117.160.56/32
  - 191.233.24.179/32
  - 191.233.203.28/31
  - 191.233.203.240/28
  - 191.238.241.97/32
status:
  loadBalancer:
    ingress:
    - ip: 20.44.192.90
