ingressConfig.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: sample-service
    servicePort: 8080
  rules:
  - host:
    http:
      paths:
      - path: /test
        backend:
          serviceName: sample-service
          servicePort: 8080
